# asdasdsa

./: .goreleaser.yaml  Cargo.toml  README.md  cl.rb  rustreleaser.yaml
.github/utils/: single_target.sh
.github/workflows/: build_and_release.yaml  check-pre-release-tag.yaml  check.yaml  release_checksum.yaml
src/: main.rs
src/gui/screens/widgets/: popup.rs
src/resources/: mod.rs
