[package]
name = "asdasdsa"
version = "0.9.1"
edition = "2021"
homepage = "https://github.com/rvigo/cl"
repository = "https://github.com/rvigo/cl"
readme = "README.md"
description = "Group your commands and aliases in an organized and human readable place"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
